# portfolio-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  mprocs.yaml  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.cjs  tailwind.config.js  test.json
.githooks/: pre-push
.github/workflows/: build-image.yml  build.yml  deploy-container.yml  deploy.yml  lint-project.yml  linter.yml  main.yml  pipline.yml  prepare-pipeline.yml  prepare.yml  release-site.yml  setup-rust.yml  test.yml  version-check.yml
assets/: manifest.json
public/: manifest.json
src/: app.rs  lib.rs  main.rs  theme.rs
src/components/: button.rs  card.rs  icon.rs  input.rs  language_icon.rs  mod.rs  nav.rs  repo.rs  text.rs  text_area.rs
src/pages/: contact.rs  home.rs  mod.rs  not_found.rs
style/: portfolio.css  tailwind.css
