[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.4.6", default-features = false, features = ["serde"] }
leptos_router = { version = "0.4.6", default-features = false }
leptos_meta = { version = "0.4.6", default-features = false }
leptos_actix = { version = "0.4.6", default-features = false, optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
log = "0.4"
serde = "1.0.181"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3", features = [
  "Storage",
  "Window"
]}

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:actix-files", "dep:actix-web", "dep:leptos_actix", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[package.metadata.leptos]
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/generated.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
