[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# -- Leptos
leptos = { version = "0.8", features = [
    "tracing",
    "islands",
    "islands-router",
] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true, features = ["islands-router"] }
# -- Tokio, Axum & HTTP
axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true }
# -- WASM
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
# -- Other
gloo-net = "0.6"
log = "0.4"
serde = "1.0"
thiserror = "2.0"
http = "1.3.1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"], []]

[package.metadata.leptos]
# Build
output-name = "portfolio-rs"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/generated.css"
assets-dir = "assets"
# Environment
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
# Binary
bin-features = ["ssr"]
bin-default-features = false
# Library
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
# Tailwindcss
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
