[package]
name = "portfolio"
version = "0.2.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# -- Leptos
leptos = { version = "0.8", features = [
    "tracing",
    "islands",
    "islands-router",
] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true, features = ["islands-router"] }
# -- Tokio, Axum & HTTP
axum = { version = "0.8", optional = true }
http = {version = "1.3.1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true }
# -- WASM
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
# -- Other
log = "0.4"
serde = "1.0"
thiserror = "2.0"
tailwind_fuse = { version = "0.3.2", features = ["variant"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"], []]

[package.metadata.leptos]
# Build
output-name = "portfolio-rs"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
# Environment
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
# Server Side Rendering
bin-features = ["ssr"]
bin-default-features = false
# Hydration 
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
# Tailwindcss
tailwind-input-file = "style/tailwind.css"

